# bayesiantracking

./: CMakeLists.txt  KFTracking.cpp  KFTracking.h  TemplateInst.cpp  test.cpp
data/: 2012-07-24_14:49:51.417.imaging  2012-07-24_14:49:51.449.tracking0  2012-07-24_14:49:51.449.tracking1  2012-07-24_14:49:51.449.tracking2
